ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: milestone2-ingress
  namespace: default
spec:
  rules:
    - host: milestone2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-service
                port:
                  number: 3000
